<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="com.example.hardok.rssfeedandroidclient.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/buttonInteriaCategory"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginTop="220dp"
        android:onClick="kliknietoInteria"
        android:text="@string/buttonInteriaCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRMFCategory"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="kliknietoRMF"
        android:text="@string/buttonRMFCategory"
        app:layout_constraintEnd_toEndOf="@+id/buttonInteriaCategory"
        app:layout_constraintStart_toStartOf="@+id/buttonInteriaCategory"
        app:layout_constraintTop_toBottomOf="@+id/buttonInteriaCategory" />

    <ImageView
        android:id="@+id/rssIcon"
        android:layout_width="100dp"
        android:layout_height="129dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/contentDescriptionRssIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rss_logo" />

    <TextView
        android:id="@+id/textWhichSiteCategory"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="176dp"
        android:text="@string/textZJakiejStrony"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPolsatCategory"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/buttonPolsatCategory"
        app:layout_constraintEnd_toEndOf="@+id/buttonInteriaCategory"
        app:layout_constraintStart_toStartOf="@+id/buttonInteriaCategory"
        app:layout_constraintTop_toBottomOf="@+id/buttonRMFCategory" />

    <Button
        android:id="@+id/buttonTVN24Category"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/buttonTVN24Category"
        app:layout_constraintEnd_toEndOf="@+id/buttonInteriaCategory"
        app:layout_constraintStart_toStartOf="@+id/buttonInteriaCategory"
        app:layout_constraintTop_toBottomOf="@+id/buttonPolsatCategory" />
    <!---srodkiem jest 231 dp -->


</android.support.constraint.ConstraintLayout>
